new configmover version